bad/2020-07-06/15-15/2.0/build.err
run.c: In function ‘cabin’:
run.c:9:13: error: expected expression before ‘)’ token
         if ()
             ^